fixed popover alignment

--- a/src/renderer/less/helpers.less
+++ b/src/renderer/less/helpers.less
@@ -505,7 +505,8 @@
     .popover-artwork {
       width: 200px;
       height: 200px;
-      margin: 0 0 20px 0;
+      margin: 0 auto;
+      margin-bottom: 20px;
     }
 
     .song-name {
